@@ -1,30 +1,18 @@
 ---
-lastmod: "2026-01-08"
+lastmod: "2026-01-09"
 title: Producer 튜닝
 weight: 7
 author: "@kimbenji"
 author_url: "http://github.com/kimbenji"
 ---
 
-# Producer 튜닝
+Producer 성능을 최적화하는 핵심 설정들을 이해합니다. 이 문서는 Kafka 3.6.x 기준으로 작성되었으며, Spring Boot 3.2.x와 Spring Kafka 3.1.x, Java 17 환경에서 코드 예제가 검증되었습니다.
 
-Producer 성능을 최적화하는 핵심 설정들을 이해합니다.
+이 문서를 읽기 전에 [심화 개념](../advanced-concepts/)에서 acks, Message Key, Idempotent Producer를, [메시지 흐름](../message-flow/)에서 Topic, Partition, Broker 개념을 먼저 이해하고 있어야 합니다.
 
-| 검증 환경 | 버전 |
-|----------|------|
-| Kafka | 3.6.1 (KRaft) |
-| Spring Boot | 3.2.x |
-| Spring Kafka | 3.1.x |
-| Java | 17 |
+#### Producer 내부 구조
 
-> 이 문서의 코드 예제는 위 환경에서 컴파일 및 동작이 확인되었습니다.
-
-## 선행 지식
-
-- [심화 개념](../advanced-concepts/) - acks, Message Key, Idempotent Producer
-- [메시지 흐름](../message-flow/) - Topic, Partition, Broker 개념
-
-## Producer 내부 구조
+Producer는 애플리케이션에서 send()를 호출하면 Serializer가 메시지를 직렬화하고, Partitioner가 어떤 Partition으로 보낼지 결정합니다. 그 후 배치에 메시지를 모아두고, Sender Thread가 Broker로 전송합니다.
 
 ```mermaid
 flowchart LR
@@ -48,38 +36,11 @@ flowchart LR
     SENDER --> BROKER
 ```
 
-## 핵심 설정 개요
+핵심 설정으로 batch.size는 배치 크기(기본값 16KB), linger.ms는 배치 대기 시간(기본값 0ms), buffer.memory는 전체 버퍼 크기(기본값 32MB), compression.type은 압축 방식(기본값 none), max.in.flight.requests.per.connection은 동시 요청 수(기본값 5)입니다.
 
-| 설정 | 기본값 | 영향 |
-|------|--------|------|
-| `batch.size` | 16KB | 배치 크기 |
-| `linger.ms` | 0ms | 배치 대기 시간 |
-| `buffer.memory` | 32MB | 전체 버퍼 크기 |
-| `compression.type` | none | 압축 방식 |
-| `max.in.flight.requests.per.connection` | 5 | 동시 요청 수 |
+#### batch.size
 
-## batch.size
-
-한 번에 전송할 메시지 배치의 최대 크기입니다.
-
-### 동작 원리
-
-```mermaid
-flowchart TB
-    subgraph SmallBatch["batch.size = 1KB"]
-        S1[메시지 1개]
-        S2[메시지 1개]
-        S3[메시지 1개]
-        SN["네트워크 요청 3번"]
-    end
-
-    subgraph LargeBatch["batch.size = 16KB"]
-        L1[메시지 여러 개]
-        LN["네트워크 요청 1번"]
-    end
-```
-
-### 설정 가이드
+한 번에 전송할 메시지 배치의 최대 크기입니다. 작은 값으로 설정하면 메시지 1개당 네트워크 요청 1번이 발생하여 네트워크 오버헤드가 커집니다. 큰 값으로 설정하면 여러 메시지를 하나의 네트워크 요청으로 전송하여 효율이 높아집니다.
 
 ```yaml
 spring:
@@ -90,16 +51,11 @@ spring:
       # batch-size: 1024   # 1KB (지연 시간 중시)
 ```
 
-| 값 | 효과 | 적합한 경우 |
-|----|------|------------|
-| **작은 값** | 낮은 지연, 낮은 처리량 | 실시간 요구사항 |
-| **큰 값** | 높은 처리량, 높은 지연 | 배치 처리 |
+작은 값은 낮은 지연과 낮은 처리량을 제공하며 실시간 요구사항에 적합합니다. 큰 값은 높은 처리량과 높은 지연을 제공하며 배치 처리에 적합합니다.
 
-## linger.ms
+#### linger.ms
 
-배치가 가득 차지 않아도 전송하기까지 대기하는 시간입니다.
-
-### 동작 원리
+배치가 가득 차지 않아도 전송하기까지 대기하는 시간입니다. 기본값 0은 메시지가 도착하면 즉시 전송합니다. 값을 5ms로 설정하면 5ms 동안 추가 메시지를 기다렸다가 함께 전송합니다.
 
 ```mermaid
 sequenceDiagram
@@ -119,8 +75,6 @@ sequenceDiagram
     P->>K: 배치 전송 (3개)
 ```
 
-### 설정 가이드
-
 ```yaml
 spring:
   kafka:
@@ -129,70 +83,15 @@ spring:
         linger.ms: 5  # 5ms 대기
 ```
 
-| 값 | 효과 | 적합한 경우 |
-|----|------|------------|
-| **0 (기본)** | 즉시 전송 | 지연 시간 최소화 |
-| **5-10ms** | 적당한 배칭 | 일반적 권장 |
-| **100ms+** | 최대 배칭 | 대용량 배치 처리 |
+기본값 0은 즉시 전송으로 지연 시간을 최소화합니다. 5~10ms는 적당한 배칭으로 일반적으로 권장됩니다. 100ms 이상은 최대 배칭으로 대용량 배치 처리에 적합합니다.
 
-### batch.size + linger.ms 조합
+batch.size와 linger.ms는 OR 조건으로 작동합니다. batch.size에 도달하거나 linger.ms가 초과되면 전송됩니다.
 
-```mermaid
-flowchart TB
-    MSG[메시지 도착]
-    CHECK{batch.size\n도달?}
-    WAIT{linger.ms\n초과?}
-    SEND[배치 전송]
+#### buffer.memory
 
-    MSG --> CHECK
-    CHECK -->|Yes| SEND
-    CHECK -->|No| WAIT
-    WAIT -->|Yes| SEND
-    WAIT -->|No| MSG
-```
+Producer가 사용할 수 있는 전체 버퍼 메모리입니다. 각 Partition별로 배치가 생성되어 이 버퍼에 저장되고, Sender Thread가 Broker로 전송합니다.
 
-둘 중 하나의 조건이 만족되면 전송됩니다.
-
-## buffer.memory
-
-Producer가 사용할 수 있는 전체 버퍼 메모리입니다.
-
-### 동작 원리
-
-```mermaid
-flowchart TB
-    subgraph Buffer["buffer.memory = 32MB"]
-        B1[Partition 0\n배치]
-        B2[Partition 1\n배치]
-        B3[Partition 2\n배치]
-        FREE[여유 공간]
-    end
-
-    SEND[send] -->|버퍼에 추가| Buffer
-    Buffer -->|Sender Thread| KAFKA[Kafka]
-```
-
-### 버퍼 부족 시
-
-```mermaid
-sequenceDiagram
-    participant A as Application
-    participant P as Producer
-    participant K as Kafka
-
-    A->>P: send()
-    Note over P: 버퍼 가득!
-    Note over P: max.block.ms 동안 대기
-
-    alt 공간 확보됨
-        K-->>P: ACK - 버퍼 해제
-        P->>K: 새 메시지 전송
-    else 타임아웃
-        P-->>A: TimeoutException
-    end
-```
-
-### 설정 가이드
+버퍼가 가득 차면 max.block.ms 동안 대기합니다. 그 시간 내에 공간이 확보되면 새 메시지를 추가하고, 그렇지 않으면 TimeoutException이 발생합니다.
 
 ```yaml
 spring:
@@ -203,22 +102,16 @@ spring:
         max.block.ms: 60000  # 버퍼 대기 최대 시간
 ```
 
-**권장:** `buffer.memory` > `batch.size` × Partition 수
+권장 규칙은 buffer.memory > batch.size × Partition 수입니다.
 
-## compression.type
+#### compression.type
 
-메시지 압축 방식을 설정합니다.
-
-### 압축 방식 비교
+메시지 압축 방식을 설정합니다. 압축을 사용하면 네트워크 전송량과 Broker 저장 공간이 줄어들지만 CPU 사용량이 증가합니다.
 
 ```mermaid
 flowchart LR
     subgraph NoComp["압축 없음"]
         NC1["100KB"] --> NC2["100KB"]
-    end
-
-    subgraph GZIP["gzip"]
-        G1["100KB"] --> G2["~30KB"]
     end
 
     subgraph Snappy["snappy"]
@@ -234,15 +127,7 @@ flowchart LR
     end
 ```
 
-| 방식 | 압축률 | CPU 사용 | 속도 | 권장 |
-|------|--------|---------|------|------|
-| **none** | 0% | 최저 | 최고 | 작은 메시지 |
-| **gzip** | 최고 | 최고 | 최저 | 저장 공간 중시 |
-| **snappy** | 중간 | 낮음 | 높음 | **일반 권장** |
-| **lz4** | 중간 | 낮음 | 최고 | 고성능 요구 |
-| **zstd** | 높음 | 중간 | 높음 | Kafka 2.1+ |
-
-### 설정
+none은 압축률 0%, 최저 CPU, 최고 속도로 작은 메시지에 적합합니다. gzip은 최고 압축률이지만 최고 CPU와 최저 속도를 보여 저장 공간을 중시할 때 사용합니다. snappy는 중간 압축률, 낮은 CPU, 높은 속도로 일반적으로 권장됩니다. lz4는 중간 압축률, 낮은 CPU, 최고 속도로 고성능이 요구될 때 권장됩니다. zstd는 높은 압축률, 중간 CPU, 높은 속도로 Kafka 2.1 이상에서 사용 가능합니다.
 
 ```yaml
 spring:
@@ -253,25 +138,11 @@ spring:
       # compression-type: zstd  # 고압축
 ```
 
-### 압축의 이점
+압축을 사용하면 원본 100MB 데이터가 snappy로 50MB가 되어 네트워크 전송, Broker 저장, 복제 전송 모두 50% 절감됩니다.
 
-```
-원본 데이터: 100MB
-├── 네트워크 전송: 100MB
-├── 브로커 저장: 100MB
-└── 복제 전송: 200MB (RF=3)
+#### max.in.flight.requests.per.connection
 
-snappy 압축: 50MB
-├── 네트워크 전송: 50MB (-50%)
-├── 브로커 저장: 50MB (-50%)
-└── 복제 전송: 100MB (-50%)
-```
-
-## max.in.flight.requests.per.connection
-
-하나의 연결에서 ACK 대기 중인 최대 요청 수입니다.
-
-### 순서 보장 문제
+하나의 연결에서 ACK 대기 중인 최대 요청 수입니다. 이 값이 1보다 크면 요청 1이 실패하고 요청 2, 3이 성공한 후 요청 1이 재전송되어 순서가 뒤바뀔 수 있습니다.
 
 ```mermaid
 sequenceDiagram
@@ -293,7 +164,7 @@ sequenceDiagram
     Note over K: 순서: 2, 3, 1 (뒤섞임!)
 ```
 
-### 해결책
+Idempotent Producer(Kafka 3.0+ 기본 활성화)를 사용하면 시퀀스 번호로 순서가 보장되어 max.in.flight를 5까지 안전하게 사용할 수 있습니다.
 
 ```yaml
 # 방법 1: Idempotent Producer (권장)
@@ -312,11 +183,7 @@ spring:
         max.in.flight.requests.per.connection: 1
 ```
 
-Idempotent Producer는 시퀀스 번호로 순서를 보장합니다.
-
-## 재시도 설정
-
-### 핵심 설정
+#### 재시도 설정
 
 ```yaml
 spring:
@@ -329,24 +196,11 @@ spring:
         request.timeout.ms: 30000  # 단일 요청 타임아웃
 ```
 
-### 타임아웃 관계
+delivery.timeout.ms는 메시지 전송의 전체 타임아웃입니다. 이 시간 내에 요청, 대기, 재시도를 반복합니다. 규칙은 delivery.timeout.ms >= request.timeout.ms + linger.ms입니다.
 
-```mermaid
-flowchart LR
-    subgraph DeliveryTimeout["delivery.timeout.ms (120초)"]
-        R1[요청 1\n30초]
-        W1[대기\n100ms]
-        R2[재시도\n30초]
-        W2[대기\n100ms]
-        R3[재시도\n30초]
-    end
-```
+#### 프로필별 설정 예시
 
-**규칙:** `delivery.timeout.ms` >= `request.timeout.ms` + `linger.ms`
-
-## 프로필별 설정 예시
-
-### 처리량 최적화 (Throughput)
+**처리량 최적화 (Throughput)**
 
 ```yaml
 spring:
@@ -360,7 +214,7 @@ spring:
         buffer.memory: 67108864  # 64MB
 ```
 
-### 지연 시간 최적화 (Latency)
+**지연 시간 최적화 (Latency)**
 
 ```yaml
 spring:
@@ -373,7 +227,7 @@ spring:
         linger.ms: 0
 ```
 
-### 균형잡힌 설정 (Balanced)
+**균형잡힌 설정 (Balanced)**
 
 ```yaml
 spring:
@@ -387,30 +241,10 @@ spring:
         enable.idempotence: true
 ```
 
-## 설정 튜닝 가이드
+#### 성능 특성 참고 데이터
 
-```mermaid
-flowchart TB
-    Q1{처리량 vs\n지연시간?}
-    Q2{메시지 크기?}
-    Q3{순서 중요?}
+아래 수치는 참고용입니다. 실제 성능은 환경(하드웨어, 네트워크, 메시지 크기, 직렬화 방식)에 따라 크게 달라집니다. 직접 측정을 권장합니다.
 
-    Q1 -->|처리량| TH[batch.size ↑\nlinger.ms ↑\ncompression: lz4]
-    Q1 -->|지연시간| LT[batch.size ↓\nlinger.ms=0]
-
-    Q2 -->|큰 메시지| BIG[compression: zstd]
-    Q2 -->|작은 메시지| SMALL[compression: none]
-
-    Q3 -->|Yes| ORD[enable.idempotence=true]
-```
-
-## 성능 특성 참고 데이터
-
-아래 수치는 **참고용**입니다. 실제 성능은 환경(하드웨어, 네트워크, 메시지 크기, 직렬화 방식)에 따라 크게 달라집니다.
-
-> **측정 환경 예시**: 3-node Kafka 클러스터, 각 노드 8 vCPU, 32GB RAM, NVMe SSD, 1Gbps 네트워크
-
-**직접 측정을 권장합니다:**
 ```bash
 # Kafka 내장 성능 테스트 도구
 kafka-producer-perf-test.sh --topic test-topic \
@@ -421,51 +255,17 @@ kafka-producer-perf-test.sh --topic test-topic \
         linger.ms=5 batch.size=16384
 ```
 
-### linger.ms 영향 측정
+linger.ms=5만으로도 처리량이 약 2.7배 증가합니다. 대부분의 경우 5~20ms가 최적입니다. batch.size는 64KB 이상에서 처리량 증가가 미미하며, 메모리 대비 효율은 64KB가 최적입니다.
 
-| linger.ms | 메시지 크기 | 초당 메시지 | 레이턴시 (p99) | 네트워크 요청/초 |
-|-----------|-------------|-------------|---------------|-----------------|
-| 0 | 1KB | 45,000 | 2ms | 45,000 |
-| 5 | 1KB | 120,000 | 8ms | 8,000 |
-| 20 | 1KB | 180,000 | 25ms | 3,000 |
-| 50 | 1KB | 210,000 | 55ms | 1,500 |
+압축 방식 비교에서 snappy와 lz4가 일반적으로 권장됩니다. gzip은 압축률이 높지만 CPU 사용량이 높아 처리량이 낮아집니다.
 
-> **인사이트:** linger.ms=5만으로도 처리량이 **2.7배** 증가합니다. 대부분의 경우 5~20ms가 최적입니다.
+#### 프로덕션 트러블슈팅
 
-### batch.size 영향 측정
+**BufferExhaustedException**
 
-| batch.size | linger.ms | 초당 메시지 | 메모리 사용량 |
-|------------|-----------|-------------|--------------|
-| 16KB | 5 | 120,000 | 낮음 |
-| 64KB | 5 | 165,000 | 중간 |
-| 128KB | 5 | 175,000 | 높음 |
-| 256KB | 5 | 178,000 | 매우 높음 |
-
-> **인사이트:** 64KB 이상에서는 처리량 증가가 미미합니다. 메모리 대비 효율은 **64KB**가 최적입니다.
-
-### 압축 방식 비교 (10KB 메시지)
-
-| 압축 방식 | 압축률 | 처리량 (msg/s) | CPU 사용률 | 권장 여부 |
-|----------|--------|---------------|-----------|----------|
-| none | 0% | 180,000 | 15% | 작은 메시지 |
-| snappy | 55% | 165,000 | 25% | **일반 권장** |
-| lz4 | 52% | 175,000 | 22% | **고성능 권장** |
-| gzip | 72% | 95,000 | 45% | 저장 공간 중시 |
-| zstd | 68% | 140,000 | 30% | Kafka 2.1+ |
-
-## 프로덕션 트러블슈팅
-
-### 1. BufferExhaustedException
-
-```
-org.apache.kafka.clients.producer.BufferExhaustedException:
-Failed to allocate memory within the configured max blocking time
-```
-
-**원인:** buffer.memory가 가득 차서 max.block.ms 시간 내에 공간 확보 실패
+buffer.memory가 가득 차서 max.block.ms 시간 내에 공간 확보에 실패한 경우입니다. buffer.memory를 증가시키거나 max.block.ms를 늘리거나 linger.ms를 조정하여 배치 전송을 촉진합니다.
 
 ```yaml
-# 해결책
 spring:
   kafka:
     producer:
@@ -475,69 +275,13 @@ spring:
         linger.ms: 5           # 배치 전송 촉진
 ```
 
-**근본 원인 파악:**
-```bash
-# Broker 응답 시간 확인
-kafka-producer-perf-test.sh --topic test \
-    --num-records 100000 \
-    --record-size 1000 \
-    --throughput -1 \
-    --producer-props bootstrap.servers=localhost:9092
+**RecordTooLargeException**
 
-# 느린 Broker가 있으면 해당 노드 점검
-```
+메시지가 max.request.size를 초과한 경우입니다. Producer, Broker, Topic 모두에서 최대 크기 설정을 조정해야 합니다. 메시지가 1MB를 초과하면 참조 패턴 사용을 고려합니다. 실제 데이터는 S3나 MinIO에 저장하고 Kafka에는 URL만 전송합니다.
 
-### 2. RecordTooLargeException
+**TimeoutException (Delivery Timeout)**
 
-```
-org.apache.kafka.common.errors.RecordTooLargeException:
-The message is 2097152 bytes when serialized which is larger than 1048576
-```
-
-**해결책:**
-
-```yaml
-# Producer 설정
-spring:
-  kafka:
-    producer:
-      properties:
-        max.request.size: 10485760  # 10MB
-
-# Broker 설정 (server.properties)
-message.max.bytes: 10485760
-
-# Topic 설정
-max.message.bytes: 10485760
-```
-
-> **권장:** 메시지가 1MB를 초과하면 **참조 패턴** 사용을 고려하세요. 실제 데이터는 S3/MinIO에 저장하고 Kafka에는 URL만 전송합니다.
-
-### 3. TimeoutException (Delivery Timeout)
-
-```
-org.apache.kafka.common.errors.TimeoutException:
-Expiring 16 record(s) for topic-0:120000 ms has passed since batch creation
-```
-
-**원인 분석 체크리스트:**
-
-```bash
-# 1. Broker 상태 확인
-kafka-metadata.sh --snapshot /path/to/kafka-logs/__cluster_metadata-0/00000000000000000000.log --status
-
-# 2. 네트워크 레이턴시 확인
-ping kafka-broker1
-
-# 3. Broker 로그 확인 (느린 디스크 I/O?)
-grep -i "slow" /var/log/kafka/server.log
-
-# 4. ISR 상태 확인 (min.insync.replicas 충족?)
-kafka-topics.sh --describe --topic orders \
-    --bootstrap-server localhost:9092
-```
-
-**해결 설정:**
+delivery.timeout.ms 내에 전송이 완료되지 않은 경우입니다. Broker 상태, 네트워크 레이턴시, ISR 상태를 확인하고 타임아웃 설정을 조정합니다.
 
 ```yaml
 spring:
@@ -550,78 +294,46 @@ spring:
         retry.backoff.ms: 500
 ```
 
-## 메모리 최적화 가이드
+#### 메모리 최적화 가이드
 
-### Producer 메모리 계산
+Producer 메모리 계산은 buffer.memory + (batch.size × Partition 수) + 오버헤드입니다. 예를 들어 buffer.memory 32MB, batch.size 64KB × 30 Partitions = 1.9MB, Serialization 버퍼 약 10MB로 총 약 45MB per Producer가 예상됩니다.
 
-```
-총 메모리 = buffer.memory + (batch.size × Partition 수) + 오버헤드
+메시지 볼륨이 낮으면(~1K/s) Heap 512MB와 buffer.memory 32MB를, 중간(~10K/s)이면 Heap 1GB와 buffer.memory 64MB를, 높으면(~100K/s) Heap 2GB 이상과 buffer.memory 128MB 이상을 권장합니다.
 
-예시:
-├── buffer.memory: 32MB
-├── batch.size: 64KB × 30 Partitions = 1.9MB
-├── Serialization 버퍼: ~10MB
-└── 총 예상: ~45MB per Producer
-```
+#### 정리
 
-### JVM 튜닝 권장사항
+처리량을 높이려면 batch.size와 linger.ms를 증가시키고 lz4나 snappy 압축을 사용합니다. 지연시간을 줄이려면 batch.size를 줄이고 linger.ms를 0으로 설정합니다. buffer.memory는 처리량에 영향을 주지만 지연시간에는 직접 영향이 없습니다.
 
-```bash
-# Producer 애플리케이션 JVM 옵션 (Java 17+ 기준)
-JAVA_OPTS="-Xms512m -Xmx2g \
-  -XX:+UseG1GC \
-  -XX:MaxGCPauseMillis=20 \
-  -XX:+ParallelRefProcEnabled"
-
-# 대용량 처리 시 ZGC 고려 (Java 17+)
-# JAVA_OPTS="-Xms2g -Xmx4g -XX:+UseZGC"
-```
-
-**G1GC 선택 이유:**
-- Kafka Producer는 중간 크기 힙(1~4GB)에서 주로 운영
-- G1GC는 이 범위에서 레이턴시/처리량 균형 우수
-- MaxGCPauseMillis=20은 Kafka 기본 request.timeout.ms(30초) 대비 충분히 작음
-
-| 메시지 볼륨 | Heap 크기 | buffer.memory |
-|------------|----------|---------------|
-| 낮음 (~1K/s) | 512MB | 32MB |
-| 중간 (~10K/s) | 1GB | 64MB |
-| 높음 (~100K/s) | 2GB+ | 128MB+ |
-
-## 정리
-
-| 설정 | 처리량 ↑ | 지연시간 ↓ |
-|------|----------|-----------|
-| `batch.size` | ↑ 크게 | ↓ 작게 |
-| `linger.ms` | ↑ 크게 | = 0 |
-| `compression.type` | lz4/snappy | none |
-| `buffer.memory` | ↑ 크게 | 영향 없음 |
-
-## FAQ
+#### FAQ
 
 **Q: linger.ms를 늘리면 메시지 유실 위험이 있나요?**
-> A: 아니요. linger.ms는 버퍼에서 대기하는 시간이며, 이 시간 동안 Producer가 죽으면 버퍼 내 메시지는 유실됩니다. 하지만 이는 acks 설정과 무관합니다. 중요 데이터는 `acks=all`과 함께 사용하세요.
+
+아니요. linger.ms는 버퍼에서 대기하는 시간이며, 이 시간 동안 Producer가 죽으면 버퍼 내 메시지는 유실됩니다. 하지만 이는 acks 설정과 무관합니다. 중요 데이터는 acks=all과 함께 사용하세요.
 
 **Q: batch.size와 linger.ms 중 뭘 먼저 튜닝해야 하나요?**
-> A: `linger.ms`를 먼저 튜닝하세요. 기본값 0에서 5~20ms로만 바꿔도 처리량이 크게 향상됩니다. batch.size는 그 다음에 조정합니다.
+
+linger.ms를 먼저 튜닝하세요. 기본값 0에서 5~20ms로만 바꿔도 처리량이 크게 향상됩니다. batch.size는 그 다음에 조정합니다.
 
 **Q: 압축을 사용하면 Producer CPU가 병목이 될 수 있나요?**
-> A: 네. gzip은 CPU 사용량이 높습니다. CPU 병목이 우려되면 lz4나 snappy를 사용하세요. 압축률은 낮지만 속도가 빠릅니다.
+
+네. gzip은 CPU 사용량이 높습니다. CPU 병목이 우려되면 lz4나 snappy를 사용하세요. 압축률은 낮지만 속도가 빠릅니다.
 
 **Q: buffer.memory가 부족하면 어떻게 되나요?**
-> A: `max.block.ms` 시간 동안 대기 후 `BufferExhaustedException` 발생. buffer.memory를 늘리거나 Broker 응답 속도를 확인하세요.
+
+max.block.ms 시간 동안 대기 후 BufferExhaustedException이 발생합니다. buffer.memory를 늘리거나 Broker 응답 속도를 확인하세요.
 
 **Q: Idempotent Producer를 쓰면 성능이 떨어지나요?**
-> A: Kafka 3.0+에서는 기본 활성화이며, 성능 영향은 미미합니다 (1~2% 이내). 순서 보장과 중복 방지 이점이 더 큽니다.
 
-## 참고 자료
+Kafka 3.0 이상에서는 기본 활성화이며, 성능 영향은 미미합니다(1~2% 이내). 순서 보장과 중복 방지 이점이 더 큽니다.
+
+#### 참고 자료
 
 - [Kafka Producer Configs - Apache Documentation](https://kafka.apache.org/documentation/#producerconfigs)
 - [Kafka Performance Tuning - Confluent Blog](https://www.confluent.io/blog/configure-kafka-to-minimize-latency/)
 - [Producer Compression - Confluent Documentation](https://docs.confluent.io/platform/current/installation/configuration/producer-configs.html#compression-type)
 - [kafka-producer-perf-test - Kafka Tools](https://kafka.apache.org/documentation/#basic_ops_producer_perf)
 
-## 다음 단계
+#### 다음 단계
 
 - [Consumer 심화 운영](../consumer-advanced/) - Consumer 성능 최적화
 - [트랜잭션](../transactions/) - Exactly-Once 처리
